app/styles/main.scss
// bower:scss
// endbower

.browsehappy {
  margin: 0.2em 0;
  background: #ccc;
  color: #000;
  padding: 0.2em 0;
}

body {
  padding: 0;
  background-image: url('../images/backgroundImage.png');
}

/* Everything but the jumbotron gets side spacing for mobile first views */
.header,
.marketing,
.footer {
  padding-left: 15px;
  padding-right: 15px;
}

/* Custom page header */
.header {
  border-bottom: 1px solid #e5e5e5;
  margin-bottom: 10px;

  /* Make the masthead heading the same height as the navigation */
  h3 {
    margin-top: 0;
    margin-bottom: 0;
    line-height: 40px;
    padding-bottom: 19px;
  }
}

.container-narrow > hr {
  margin: 30px 0;
}

/* Main marketing message and sign up button */
.jumbotron {
  text-align: center;
  border-bottom: 1px solid #e5e5e5;

  .btn {
    font-size: 21px;
    padding: 14px 24px;
  }
}

/* Supporting marketing content */
.marketing {
  margin: 40px 0;

  p + h4 {
    margin-top: 28px;
  }
}

.main-block {
    margin-top: 50px;
}
.custom-border {
    border: 1px solid grey;
    border-radius: 5px;
}
.scrolling {
    min-height: 100px;
}
li {
    list-style: none;
}
img {
  width: 100%;
}
.package-heading, .attraction-heading {
    border-bottom: 1px solid grey;
}
.ui-draggable-dragging {
    width: 273px;
}
.connected-drop-target-sortable .ui-sortable-placeholder {
    border: 1px dotted red;
    min-height: 100px;
    border-radius: 5px;
    visibility: visible !important;
    width: 100%;
    float: left;
}
.connected-drop-target-sortable {
    clear: both;
}

// slider css



.jcarousel-wrapper {
  // margin: 20px auto;
  position: relative;
  // border: 10px solid #fff;
  // -webkit-border-radius: 5px;
  // -moz-border-radius: 5px;
  // border-radius: 5px;
  // -webkit-box-shadow: 0 0 2px #999;
  // -moz-box-shadow: 0 0 2px #999;
  // box-shadow: 0 0 2px #999;
}
/** Carousel **/

.jcarousel {
  position: relative;
  overflow: hidden;
  width: 100%;
}
.jcarousel ul {
  width: 20000em;
  position: relative;
  list-style: none;
  margin: 0;
  padding: 0;
}
.jcarousel li {
  width: 200px;
  float: left;
  border: 1px solid #fff;
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}
.jcarousel img {
  display: block;
  max-width: 100%;
  height: 230px;
}
/** Carousel Controls **/

.jcarousel-control-prev, .jcarousel-control-next {
  position: absolute;
  top: 50%;
  margin-top: -15px;
  width: 30px;
  height: 30px;
  text-align: center;
  background: #4E443C;
  color: #fff;
  text-decoration: none;
  text-shadow: 0 0 1px #000;
  font: 24px/27px Arial, sans-serif;
  -webkit-border-radius: 30px;
  -moz-border-radius: 30px;
  border-radius: 30px;
  -webkit-box-shadow: 0 0 4px #F0EFE7;
  -moz-box-shadow: 0 0 4px #F0EFE7;
  box-shadow: 0 0 4px #F0EFE7;
}
.jcarousel-control-prev {
  left: 15px;
}
.jcarousel-control-next {
  right: 15px;
}
/** Carousel Pagination **/

.jcarousel-pagination {
  position: absolute;
  bottom: -40px;
  left: 50%;
  -webkit-transform: translate(-50%, 0);
  -ms-transform: translate(-50%, 0);
  transform: translate(-50%, 0);
  margin: 0;
}
.jcarousel-pagination a {
  text-decoration: none;
  display: inline-block;
  font-size: 11px;
  height: 10px;
  width: 10px;
  line-height: 10px;
  background: #fff;
  color: #4E443C;
  border-radius: 10px;
  text-indent: -9999px;
  margin-right: 7px;
  -webkit-box-shadow: 0 0 2px #4E443C;
  -moz-box-shadow: 0 0 2px #4E443C;
  box-shadow: 0 0 2px #4E443C;
}
.jcarousel-pagination a.active {
  background: #4E443C;
  color: #fff;
  opacity: 1;
  -webkit-box-shadow: 0 0 2px #F0EFE7;
  -moz-box-shadow: 0 0 2px #F0EFE7;
  box-shadow: 0 0 2px #F0EFE7;
}

// home page styling
.no-padding {
  padding: 0;
}
.no-margin {
  margin: 0;
}
/* Header CSS Start */
.header {
    padding: 0;
    border: 0;

    .navbar-default {
        background: #689f38;
        border: 0;
        border-radius: 0;
        min-height: 60px;
        z-index: 1;
    }

    .navbar-nav {
        float: right;
        font-family: 'Roboto', sans-serif;
        font-size: 18px;
        font-weight: 300;
    }

    .navbar-default .navbar-nav > li > a {
        padding: 19px 18px;
    }
    .navbar-default .navbar-nav > li > a,
    .navbar-default .navbar-nav > li > a:hover,
    .navbar-default .navbar-nav > li > a:focus {
        color: #fff;
    }
}
/* Header CSS End */

/* Plan Your Vacation CSS Start */
.banner-section {
    padding-bottom: 172px;
}
.plan-vacation {
    padding: 20px 0 53px;
}
.company-logo {
    img {
        width: auto;
    }
}
.vacation-heading {
    font-family: 'Roboto', sans-serif;
    text-align: right;
    color: #fff;
    h2 {
        font-size: 72px;
        font-weight: 300;
        line-height: 1;
        margin: 0;
    }
    h2 span {
        font-size: 48px;
        display: block;
    }
}
/* ... */

